crates/pcb-zen-core/tests/snapshots/net__net_field_type_mismatch.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
Error: test.zen:9:7-32 Field `voltage` has wrong type: expected `str`, got value `123` of type `int`
