crates/pcb-zen-core/tests/snapshots/net__net_field_with_direct_type.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
clk.frequency: 8000000
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
