crates/pcb-zen-core/tests/snapshots/net__net_field_with_enum.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
sig1.level: enum("HIGH")
Module {
    name: "<root>",
    source: "test.zen",
}
[]
