crates/pcb-zen-core/tests/snapshots/net__net_field_with_field_spec.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
vcc.voltage: 5V
vdd.voltage: 3.3V
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
