crates/pcb-zen-core/tests/snapshots/net__net_field_with_physical_value.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
vcc.voltage: 5V
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
