crates/pcb-zen-core/tests/snapshots/net__net_multiple_collisions_error.snap
---
source: crates/pcb-zen-core/tests/net.rs
assertion_line: 114
expression: output
---
Error: test.zen:6:6-16 Duplicate net name: CLK
