crates/pcb-zen-core/tests/snapshots/net__net_name_property_access.snap
---
source: crates/pcb-zen-core/tests/net.rs
assertion_line: 72
expression: output
---
net1.name: POWER_3V3
net2.name: GND
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
