crates/pcb-zen-core/tests/snapshots/net__net_no_collision_different_names.snap
---
source: crates/pcb-zen-core/tests/net.rs
assertion_line: 130
expression: output
---
clk: CLK
rst: RST
en: EN
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
}
[]
