crates/pcb-zen-core/tests/snapshots/net__net_rejects_invalid_symbol.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
Error: test.zen:6:1-37 Field `symbol` has wrong type: expected `Symbol`, got value `"not a symbol"` of type `string`
