crates/pcb-zen-core/tests/snapshots/net__net_symbol_deep_copy.snap
---
source: crates/pcb-zen-core/tests/net.rs
expression: output
---
Net1: Net { name: "NET1", id: "<ID>", properties: {"symbol_name": Value("Symbol1")}, symbol: Value(Symbol { name: "Symbol1", pins: {"1": Value("A")} }) }
Net2: Net { name: "NET2", id: "<ID>", properties: {"symbol_name": Value("Symbol1")}, symbol: Value(Symbol { name: "Symbol1", pins: {"1": Value("A")} }) }
Module {
    name: "<root>",
    source: "test.zen",
}
[]
